--- a/app/public/style.css
+++ b/app/public/style.css
@@ -1,30 +1,51 @@
 body {
   margin-bottom: 150px;
-  background-color: #342f28;
+  background-image: url('love.jpg');
   font-family: 'Shadows Into Light', cursive;
-  color: #fff;
+  color: #2e2e2e;
+  background-size: cover;
+  background-repeat: repeat-y;
 }
-
 
 html {
   position: relative;
   min-height: 100%;
+}
+#tex{
+  font-size: 40px;
+  color: #6b5900;
+  font-family: 'Ceviche One', cursive;
+  text-shadow: 2px 2px #ababab;
+
+}
+
+
+/*font-family: 'Amaranth', sans-serif;
+font-family: 'Ceviche One', cursive;
+font-family: 'Fugaz One', cursive;*/
+
+.myform{
+font-family: 'Fugaz One', cursive;
+font-size: 20px;
 }
 
 
 #top {
   height: 30px;
   padding-top: 10px;
-  padding-bottom: 70px;
-  font-family: 'Shadows Into Light', cursive;
-  font-size: 45px;
+  padding-bottom: 90px;
+  font-family: 'Ceviche One', cursive;
+  font-size: 60px;
   font-weight: 900px;
-  color: #fff;
-  background: #fd4c00;
+  color: #6b5900;
+  background: #361212;
   text-align: center;
   border-color: #fd4c00;
+  text-shadow: 2px 2px #ababab;
+
 }
 
+}
 .container{
   width: 84%;
 }
@@ -35,10 +56,12 @@ h3 {
 }
 
 .btn{
-  background-color:#b88700;
-  border-color:#b88700;
-  color: #fff;
+  background-color:#361212;
+  border-color:#361212;
+  color: #ababab;
   margin-top: 20px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900 ;
 }
 
 #submit-btn{
@@ -57,7 +80,7 @@ h3 {
 
 input:required,
 textarea:required {
-border-color:orange;
+border-color:#fff;
 }
 
 #choosing{
@@ -66,13 +89,13 @@ border-color:orange;
   border-color:#342f28;
 }
 
-.footer {
+/*.footer {
   position: absolute;
   bottom: 100px;
   width: 100%;
   height: 10px;
-  background-color: #342f28; 
-}
+  background-color: #342f28;
+}*/
 
 #gifbox{
   background-color:#fff;
